<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentacion.inicio.InicioActivity">

    <!-- Bienvenida basada en el nombre -->
    <TextView
        android:id="@+id/categorias_txt_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/catvigentes_titulo"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/categorias_txt_bienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/catvigentes_bienvenida"
        android:textSize="18sp"
        android:textColor="#555555"
        app:layout_constraintTop_toBottomOf="@id/categorias_txt_titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp" />

    <!-- Botón Cultura -->
    <Button
        android:id="@+id/btnCategoriaCultura"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:text="@string/catvigentes_btn_cultura"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categorias_txt_bienvenida"
        android:layout_marginTop="60dp"
        android:backgroundTint="#3F51B5" />

    <!-- Botón Deporte -->
    <Button
        android:id="@+id/btnCategoriaDeporte"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:text="@string/catvigentes_btn_deporte"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCategoriaCultura"
        android:layout_marginTop="20dp"
        android:backgroundTint="#009688" />

    <!-- Botón Farándula -->
    <Button
        android:id="@+id/btnCategoriaFarandula"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#E91E63"
        android:text="@string/catvigentes_btn_farandula"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCategoriaDeporte" />

    <!-- Botón Arte -->
    <Button
        android:id="@+id/btnCategoriaArte"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FF9800"
        android:text="@string/catvigentes_btn_arte"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCategoriaFarandula" />

    <!-- FILA 1 -->

    <ImageView
        android:id="@+id/imgCultura"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/cultura"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCategoriaArte" />

    <ImageView
        android:id="@+id/imgDeporte"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:src="@drawable/futbol"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/btnCategoriaArte"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="40dp" />

    <!-- FILA 2 -->
    <ImageView
        android:id="@+id/imgFarandula"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:src="@drawable/farandula"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/imgCultura"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp" />

    <ImageView
        android:id="@+id/imgArte"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:src="@drawable/arte"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintTop_toBottomOf="@id/imgDeporte"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="40dp" />


</androidx.constraintlayout.widget.ConstraintLayout>